2011-01-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR other/45915
	* configure.ac (gcc_cv_as_gnu_unique_object): Only use ldd
	--version output if supported.
	* configure: Regenerate.

2011-01-06  Joseph Myers  <joseph@codesourcery.com>

	* config/linux-android.opt (tno-android-cc, tno-android-ld): New
	Driver options.

2011-01-06  Jakub Jelinek  <jakub@redhat.com>

	PR c/47150
	* c-convert.c (convert): When converting a complex expression
	other than COMPLEX_EXPR to a different complex type, ensure
	c_save_expr is called instead of save_expr, unless in_late_binary_op.
	* c-typeck.c (convert_for_assignment): Set in_late_binary_op also
	when converting COMPLEX_TYPE.

2011-01-06  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/47139
	* tree-vect-loop.c (vect_is_simple_reduction_1): Check that
	only the last reduction value is used outside the loop.  Update
	documentation.

2011-01-05  Joseph Myers  <joseph@codesourcery.com>

	* config/rtems.opt: New.
	* config.gcc (*-*-rtems*): Use rtems.opt.

2011-01-05  Changpeng Fang  <changpeng.fang@amd.com>

	* config/i386/i386.c (ix86_option_override_internal): Bulldozer
	processors do not support 3DNow instructions.

2011-01-05  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.c (spu_option_override): Set parameter
	PARAM_MAX_COMPLETELY_PEEL_TIMES to 4 instead of 1.

2011-01-05  Jan Hubicka  <jh@suse.cz>

	* lto-wrapper.c (run_gcc): Default to WHOPR mode when none is specified
	at the command line.

2011-01-05  Martin Jambor  <mjambor@suse.cz>

	PR lto/47162
	* lto-cgraph.c (output_cgraph_opt_summary_p): Also check for thunk
	deltas on streamed outgoing edges.
	(output_node_opt_summary): Output info for outgoing edges only when
	the node is in new parameter set.
	(output_cgraph_opt_summary): New parameter set, passed to the two
	aforementioned functions.  Update its forward declaration and its
	callee too.

2011-01-05  Tom Tromey  <tromey@redhat.com>
